# Bachelor_source_code

./: CMakeLists.txt  GrayScott.cc  GrayScott.prm  README.md  explicit.h  explicit_gs.h  implicit.h  implicit_gs.h  jost.cc  matrix.h  matrix_gs.h  parameters.h
